[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/main/ui/chat/nametag-manager.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/chat/chat-line-label.gd" type="Script" id=2]
[ext_resource path="res://assets/main/ui/chat/texture/bg02.png" type="Texture" id=3]
[ext_resource path="res://src/main/ui/chat/chat-frame.gd" type="Script" id=4]
[ext_resource path="res://src/main/ui/chat/chat-frame-tween.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/chat/chat-line-sprite.gd" type="Script" id=6]
[ext_resource path="res://src/main/ui/blogger-sans-medium-36.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/main/ui/blogger-sans-bold-36.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/main/ui/chat/window-small-sheet.png" type="Texture" id=9]
[ext_resource path="res://assets/main/ui/chat/nametag-large-sheet.png" type="Texture" id=11]
[ext_resource path="res://assets/main/ui/chat/frame-pop-in.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/main/ui/chat/bebebe.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/main/ui/chat/frame-pop-out.wav" type="AudioStream" id=14]
[ext_resource path="res://src/main/ui/chat/chat.shader" type="Shader" id=15]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 15 )
shader_param/border_color = Color( 0.188235, 0.188235, 0.376471, 1 )
shader_param/center_color = Color( 1, 1, 1, 1 )
shader_param/accent_color = Color( 0.435294, 0.513726, 0.858824, 1 )
shader_param/accent_scale = 2.0
shader_param/accent_flip = Vector2( 1, 1 )
shader_param/accent_amount = 0.24
shader_param/accent_swapped = false
shader_param/center_transparency = 0.16
shader_param/scroll_period = Vector2( 7.377, 4.111 )
shader_param/scroll_distance = Vector2( 120, 60 )
shader_param/accent_texture = ExtResource( 3 )

[node name="ChatFrame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 400.0
rect_pivot_offset = Vector2( 362, 79 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Defines the extents of the chat area."
}

[node name="Tween" type="Tween" parent="."]
script = ExtResource( 5 )

[node name="ChatLineSprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 512, 100 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )
vframes = 4
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": "	"
}

[node name="NametagManager" type="Sprite" parent="ChatLineSprite"]
self_modulate = Color( 0.188235, 0.188235, 0.376471, 1 )
show_behind_parent = true
position = Vector2( 956.611, -553.485 )
rotation = 0.0174533
texture = ExtResource( 11 )
vframes = 4
script = ExtResource( 1 )

[node name="Small" type="Label" parent="ChatLineSprite/NametagManager"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -921.903
margin_top = -330.684
margin_right = -741.903
margin_bottom = -293.684
rect_scale = Vector2( 4.546, 4.546 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lorem ipsu"
align = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Label" parent="ChatLineSprite/NametagManager"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1819.44
margin_top = -336.723
margin_right = -1469.44
margin_bottom = -299.723
rect_scale = Vector2( 4.546, 4.546 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lorem ipsum dolor s"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Large" type="Label" parent="ChatLineSprite/NametagManager"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1819.44
margin_top = -336.723
margin_right = -1294.44
margin_bottom = -299.723
rect_scale = Vector2( 3.031, 4.546 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lorem ipsum dolor sit amet"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraLarge" type="Label" parent="ChatLineSprite/NametagManager"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1509.42
margin_top = -384.991
margin_right = -1009.42
margin_bottom = -304.991
rect_scale = Vector2( 2.021, 3.031 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraExtraLarge" type="Label" parent="ChatLineSprite/NametagManager"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1762.15
margin_top = -381.256
margin_right = -1012.15
margin_bottom = -301.256
rect_scale = Vector2( 2.021, 3.031 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLineLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -40.0
margin_right = 180.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.376471, 1 )
text = "Hello"
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
sizes = [ Vector2( 360, 80 ), Vector2( 540, 80 ), Vector2( 540, 120 ), Vector2( 720, 120 ) ]

[node name="BebebeSound" type="AudioStreamPlayer" parent="ChatLineLabel"]
stream = ExtResource( 13 )
volume_db = -12.0
bus = "Sound Bus"

[node name="PopInSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -14.0
bus = "Sound Bus"

[node name="PopOutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -14.0
bus = "Sound Bus"
[connection signal="pop_out_completed" from="Tween" to="." method="_on_Tween_pop_out_completed"]
[connection signal="tween_completed" from="Tween" to="Tween" method="_on_tween_completed"]
[connection signal="all_text_shown" from="ChatLineLabel" to="." method="_on_ChatLineLabel_all_text_shown"]
